# ship-simulation

./: .gitignore  README.md  readme.adoc
malware/: pom.xml
malware/shared-object-code/: CMakeLists.txt
shared-object-code/: PeopleCounter.cpp  PeopleCounter.h
ship-cyber-testbed/: .gitignore  readme.adoc
ship-cyber-testbed/backend/: app.py  config.yaml  readme.adoc
ship-cyber-testbed/backend/templates/: guages.html  index.html  power-settings.html
ship-cyber-testbed/hmi/: index.html
ship-cyber-testbed/plc-files/: readme.adoc  ship.st
src/main/java/com/example/modbus/: ModbusClientExample.java
